<resources>
    <string name="app_name">Shoe Store</string>

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Sign Up</string>
    <string name="toastText">Please enter a email and password</string>
    <string name="logoutMenu">Logout</string>
    <string name="content_description">App Icon</string>

    <string name="welcomeTitle">Welcome</string>
    <string name="welcomeText">Create your own custome Shoe List</string>
    <string name="welcomeButton">Enter</string>

    <string name="instructionTitle">Instructions</string>
    <string name="instructionsText">Click in the add button to create a new element to the list. You can add all the information of the shoes (size, name, company and a description) in the details screen.</string>
    <string name="instructionButton">Start</string>

    <string name="buttonDescription">Add shoe</string>
    <string name="shoeTitle">Shoe List</string>
    <string name="detailTitle">Detail Shoe</string>

    <string name="shoeName">Name</string>
    <string name="shoeSize">Size</string>
    <string name="shoeCompany">Company</string>
    <string name="shoeDescription">Description</string>

    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>

</resources>