<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Constraint layout is the nested components tree-->
    <androidx.constraintlayout.widget.ConstraintLayout style="@style/constraints">

        <TextView
            android:id="@+id/welcomeTitle"
            style="@style/titleText"
            android:text="@string/welcomeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeText"
            style="@style/textViews"
            android:text="@string/welcomeText"
            app:layout_constraintBottom_toTopOf="@id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonStyle"
            android:text="@string/welcomeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>