<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Constraint layout is the nested components tree-->
    <androidx.constraintlayout.widget.ConstraintLayout style="@style/constraints">

        <TextView
            android:id="@+id/instructionTitle"
            style="@style/titleText"
            android:text="@string/instructionTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionText"
            style="@style/textViews"
            android:text="@string/instructionsText"
            app:layout_constraintBottom_toTopOf="@id/enterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionTitle" />

        <Button
            android:id="@+id/enterButton"
            style="@style/buttonStyle"
            android:text="@string/instructionButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>