<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detailView"
            type="com.chgonzalez.shoestore.utils.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_start">

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/merriweather_black"
            android:text="@string/detailTitle"
            android:textStyle="bold"
            android:textSize="@dimen/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/separation_margin"
            android:src="@drawable/zapatos_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTitle"
            app:layout_constraintBottom_toTopOf="@id/nameTextEdit"
            app:layout_constraintVertical_chainStyle="spread"
            android:contentDescription="@string/content_description" />

        <EditText
            android:id="@+id/nameTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@{detailView.name}"
            app:layout_constraintTop_toBottomOf="@id/app_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sizeTextEdit"
            android:autofillHints="@string/shoeName"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/sizeTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="number"
            android:text="@{String.valueOf(detailView.size)}"
            app:layout_constraintTop_toBottomOf="@id/nameTextEdit"
            app:layout_constraintBottom_toTopOf="@id/companyTextEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/shoeSize"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/companyTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@{detailView.company}"
            app:layout_constraintTop_toBottomOf="@id/sizeTextEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/descrptionTextEdit"
            android:autofillHints="@string/shoeCompany"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/descrptionTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@{detailView.description}"
            app:layout_constraintTop_toBottomOf="@id/companyTextEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonContainer"
            android:autofillHints="@string/shoeDescription"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descrptionTextEdit"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancelButton"
                style="@style/detailButtons"
                android:text="@string/cancelButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/saveButton"
                style="@style/detailButtons"
                android:text="@string/saveButton"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>